Likes Features Added

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 DATABASE='mongodb+srv://admin:admin@cluster0.qstdi.mongodb.net/blogApp'
 JWT_SECRET_KEY='TopSecret'
+
+CloudName = doiff4svr
+ApiKey = 896734988678131
+ApiSecret = vK9IRl4iUarfDLsepD8A3l46OLE
+
+Account_Sid=AC4b3b7e886b1861885cc81976637a672f
+AuthToken = 366008745f20ee2a4494f56921b6e36f
+
+JWT_SECRET_KEY = BLOG_WORLD_LOGIN_SYSTEM
