--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "build": "[my-framework] build --output public"
+    "dev": "nodemon ./bin/www"
+   
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
