file uplad success

--- a/.env
+++ b/.env
@@ -10,6 +10,15 @@ AuthToken = 366008745f20ee2a4494f56921b6e36f
 
 JWT_SECRET_KEY = BLOG_WORLD_LOGIN_SYSTEM
 
+#   //  const files = req.files
+#   //   for(const file of files){
+#   //       const {path}=file
+#   //       const newPath = await uploader(path)
+#   //       url.push(newPath);
+#   //       fs.unlinkSync(path)
+#   //   }
+#     // console.log(uploader)
+# //   const pass = "123";
 
 
 
